Changed api key to a variable
Can easily swap in a new key.

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.102
+Version=0.110
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -26,11 +26,16 @@ Instructions=Type in the summoner's name of someone currently in game to display
 ; 
 
 [Variables]
-; These variables are used for various regexp or url paths.
+; These variables are used for various regexp or url paths
 summJSON=TempJSON\summoners.json
 summItem=.*summonerName":"(.*)",.*"summonerId":(.*),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
+
+; This api key is specific to me (hurricaned on NA server).
+; If this app isn't left running or abused, it should be ok.
+; Else, I would appreciate registering for your own api key at https://developer.riotgames.com
+apiKey=?api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
 
 ; Current ID place-holder is for: hurricaned.
 NamePlaceholder=hurricaned
@@ -65,7 +70,7 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test1.txt
-URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder#?api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
+URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder##apiKey#
 RegExp=(?siU)"id":(\d{1,9}),
 UpdateRate = 15
 FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch All"]
@@ -92,7 +97,7 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test2.txt
-URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder#?api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
+URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder##apiKey#
 RegExp=(?siU)"gameMode":"(.*)",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
 UpdateRate = 15
 
@@ -232,7 +237,7 @@ DynamicVariables=1
 Download=1
 DownloadFile=#summJSON#
 ;URL=file://#CURRENTPATH#test3.txt
-URL=https://#RegionA#.api.pvp.net/api/lol/#RegionA#/v2.5/league/by-summoner/[&Sum01_ID],[&Sum02_ID],[&Sum03_ID],[&Sum04_ID],[&Sum05_ID],[&Sum06_ID],[&Sum07_ID],[&Sum08_ID],[&Sum09_ID],[&Sum10_ID]/entry?api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
+URL=https://#RegionA#.api.pvp.net/api/lol/#RegionA#/v2.5/league/by-summoner/[&Sum01_ID],[&Sum02_ID],[&Sum03_ID],[&Sum04_ID],[&Sum05_ID],[&Sum06_ID],[&Sum07_ID],[&Sum08_ID],[&Sum09_ID],[&Sum10_ID]/entry#apiKey#
 UpdateRate = 15
 
 
