Streamlined Summoners' Search.
No need to return key twice per search.
Search now saves last typed summoner instead of defaulting to a saved
one each time.
Fixed window-focus stealing every 15 seconds.

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.110
+Version=0.120
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -28,32 +28,34 @@ Instructions=Type in the summoner's name of someone currently in game to display
 [Variables]
 ; These variables are used for various regexp or url paths
 summJSON=TempJSON\summoners.json
+IMGS=#SKINSPATH#\LeagueSearch\Variables\Images\
 summItem=.*summonerName":"(.*)",.*"summonerId":(.*),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
 
-; This api key is specific to me (hurricaned on NA server).
-; If this app isn't left running or abused, it should be ok.
-; Else, I would appreciate registering for your own api key at https://developer.riotgames.com
-apiKey=?api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
-
-; Current ID place-holder is for: hurricaned.
-NamePlaceholder=hurricaned
-IDPlaceholder=24195176
-
 ; Different region formats for the API calls.
+RegionA=na
+RegionB=NA1
 
 ; Regarding Regions: 
 ; For all the possible servers, please consult
 ;  https://developer.riotgames.com/docs/regional-endpoints
 ; In my code, RegionA = Region.   RegionB = Platform ID
-; 
+
 ; Example:  (Europe East)
 ; RegionA=eune
 ; RegionB=EUN1
 
-RegionA=na
-RegionB=NA1
+
+; This api key is specific to me (hurricaned on NA server).
+; If this app isn't left running or abused, it should be ok.
+; Else, I would appreciate registering for your own api key at https://developer.riotgames.com
+apiKey=api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
+
+; These placeholder values are mostly to streamline if you check one summoner frequently.
+; Current ID place-holder is for: Hurricaned.
+NamePlaceholder=Hurricaned
+IDPlaceholder=24195176
 
 
 
@@ -70,10 +72,10 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test1.txt
-URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder##apiKey#
+URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder#?#apiKey#
 RegExp=(?siU)"id":(\d{1,9}),
 UpdateRate = 15
-FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch All"]
+FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch 1"]
 
 [inputID]
 Measure=Plugin
@@ -97,7 +99,7 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test2.txt
-URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder##apiKey#
+URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder#?#apiKey#
 RegExp=(?siU)"gameMode":"(.*)",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
 UpdateRate = 15
 
@@ -237,7 +239,7 @@ DynamicVariables=1
 Download=1
 DownloadFile=#summJSON#
 ;URL=file://#CURRENTPATH#test3.txt
-URL=https://#RegionA#.api.pvp.net/api/lol/#RegionA#/v2.5/league/by-summoner/[&Sum01_ID],[&Sum02_ID],[&Sum03_ID],[&Sum04_ID],[&Sum05_ID],[&Sum06_ID],[&Sum07_ID],[&Sum08_ID],[&Sum09_ID],[&Sum10_ID]/entry#apiKey#
+URL=https://#RegionA#.api.pvp.net/api/lol/#RegionA#/v2.5/league/by-summoner/[&Sum01_ID],[&Sum02_ID],[&Sum03_ID],[&Sum04_ID],[&Sum05_ID],[&Sum06_ID],[&Sum07_ID],[&Sum08_ID],[&Sum09_ID],[&Sum10_ID]/entry?#apiKey#
 UpdateRate = 15
 
 
@@ -435,7 +437,7 @@ StringIndex=2
 
 [Background]
 Meter=IMAGE
-ImageName=#SKINSPATH#LeagueSearch\Variables\Images\testWhiteSquare.png
+ImageName=#IMGS#\testingBox.png
 X=0
 Y=0
 W=480
@@ -749,6 +751,20 @@ Y=150
 ; ---------------------------------------------------------------------------------------------------
 ; ***************************************************************************************************
 
+[SearchIcon]
+Meter=IMAGE
+ImageName=#IMGS#\mGlass-Box.png
+X=10
+Y=200
+Hidden=0
+AntiAlias=1
+Group=left
+MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
+MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+
+LeftMouseDownAction=!Execute ["shell:UsersFilesFolder"]
+
+
 
 [DefaultSearchText]
 Meter=STRING
@@ -782,10 +798,8 @@ FontColor=150,150,150,255
 FontFace=Droid Sans
 FontSize=8
 FocusDismiss=1
-Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue="Hurricaned"
-;Command2=[!CommandMeasure MeasureNameParser "Update"]
+Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
 Command2=[!CommandMeasure "MeasureNameParser" "Update"]
-;Command3=[!SetVariable IDPlaceholder "changed"]
 ;Command2=[!UpdateMeasure "MeasureNameParser"]
 ;Command1=!Execute ["http://www.google.com/search?q=$UserInput$"] DefaultValue="Chaox"
 AntiAlias=1
@@ -795,7 +809,8 @@ Group=left
 Measure=Plugin
 DynamicVariables=1
 Plugin=InputText.dll
-Command1=[!SetVariable IDPlaceholder $UserInput$] DefaultValue=[inputID]
-Command2=[!CommandMeasure "MeasureGameParser" "Update"]
+Command1=[!CommandMeasure "MeasureGameParser" "Update"]
+;Command2=[!SetVariable IDPlaceholder $UserInput$] DefaultValue=[inputID]
+
 
 
