--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.120
+Version=0.121
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -28,10 +28,11 @@ Instructions=Type in the summoner's name of someone currently in game to display
 [Variables]
 ; These variables are used for various regexp or url paths
 summJSON=TempJSON\summoners.json
-IMGS=#SKINSPATH#\LeagueSearch\Variables\Images\
-summItem=.*summonerName":"(.*)",.*"summonerId":(.*),
+IMGS=#SKINSPATH#LeagueSearch\Variables\Images\
+summItem=.*summonerName":"(.{0,30})",.*"summonerId":(.{0,30}),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
+
 
 ; Different region formats for the API calls.
 RegionA=na
@@ -55,7 +56,7 @@ apiKey=api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
 ; These placeholder values are mostly to streamline if you check one summoner frequently.
 ; Current ID place-holder is for: Hurricaned.
 NamePlaceholder=Hurricaned
-IDPlaceholder=24195176
+;IDPlaceholder=24195176
 
 
 
@@ -75,7 +76,7 @@ DynamicVariables=1
 URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder#?#apiKey#
 RegExp=(?siU)"id":(\d{1,9}),
 UpdateRate = 15
-FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch 1"]
+FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch All"]
 
 [inputID]
 Measure=Plugin
@@ -99,8 +100,10 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test2.txt
-URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder#?#apiKey#
-RegExp=(?siU)"gameMode":"(.*)",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
+;URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder##apiKey#
+URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/[&inputID]?#apiKey#
+RegExp=(?siU)"gameMode":"(.{1,20})",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
+;RegExp=(?siU)"gameMode":"(.{1,20})",
 UpdateRate = 15
 
 FinishAction = [!CommandMeasure MeasureSummonersParser "Update"]
@@ -751,18 +754,24 @@ Y=150
 ; ---------------------------------------------------------------------------------------------------
 ; ***************************************************************************************************
 
-[SearchIcon]
-Meter=IMAGE
-ImageName=#IMGS#\mGlass-Box.png
-X=10
-Y=200
-Hidden=0
-AntiAlias=1
-Group=left
-MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
-MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+; [SearchIcon]
+; Meter=IMAGE
+; ImageName=#IMGS#\mGlass-Box.png
+; X=10
+; Y=200
+; Hidden=0
+; AntiAlias=1
+; Group=left
+;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
+;MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
 
-LeftMouseDownAction=!Execute ["shell:UsersFilesFolder"]
+; LeftMouseDownAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
+; RightMouseDownAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+
+
+; MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
+; MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+; LeftMouseDownAction=!Execute ["shell:UsersFilesFolder"]
 
 
 
@@ -810,7 +819,11 @@ Measure=Plugin
 DynamicVariables=1
 Plugin=InputText.dll
 Command1=[!CommandMeasure "MeasureGameParser" "Update"]
-;Command2=[!SetVariable IDPlaceholder $UserInput$] DefaultValue=[inputID]
+
+;Command1=[!SetVariable IDPlaceholder $UserInput$] DefaultValue=[inputID]
+;Command1=[!SetVariable IDPlaceholder inputID] DefaultValue=[inputID]
+;Command2=[!CommandMeasure "MeasureGameParser" "Update"]
+
 
 
 
