Added Changelog;  More Readability, New Search Bar
Added a Changelog as a .txt file.
Playing with new textures for search bar to replace the old "search"
text meter.
Might be too big, doesn't really look nice right now.

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.121
+Version=0.122
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -25,9 +25,11 @@ Instructions=Type in the summoner's name of someone currently in game to display
 ; usage, it's nice to keep in mind that this program will save some json output to disk.
 ; 
 
+
 [Variables]
 ; These variables are used for various regexp or url paths
 summJSON=TempJSON\summoners.json
+sjsonFile=file://#CURRENTPATH#/DownloadFile/#summJSON#
 IMGS=#SKINSPATH#LeagueSearch\Variables\Images\
 summItem=.*summonerName":"(.{0,30})",.*"summonerId":(.{0,30}),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
@@ -250,7 +252,7 @@ UpdateRate = 15
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum01_ID]#SummInfoTier#[Sum01_ID]#summInfoDiv#
 UpdateRate=6
 ; TODO: Something about this update rate above so it doesn't keep checking my file.
@@ -272,7 +274,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum02_ID]#SummInfoTier#[Sum02_ID]#summInfoDiv#
 UpdateRate=6
 [Sum02_Tier]
@@ -290,7 +292,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum03_ID]#SummInfoTier#[Sum03_ID]#summInfoDiv#
 UpdateRate=6
 [Sum03_Tier]
@@ -308,7 +310,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum04_ID]#SummInfoTier#[Sum04_ID]#summInfoDiv#
 UpdateRate=6
 [Sum04_Tier]
@@ -326,7 +328,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum05_ID]#SummInfoTier#[Sum05_ID]#summInfoDiv#
 UpdateRate=6
 [Sum05_Tier]
@@ -344,7 +346,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum06_ID]#SummInfoTier#[Sum06_ID]#summInfoDiv#
 UpdateRate=6
 [Sum06_Tier]
@@ -362,7 +364,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum07_ID]#SummInfoTier#[Sum07_ID]#summInfoDiv#
 UpdateRate=6
 [Sum07_Tier]
@@ -380,7 +382,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum08_ID]#SummInfoTier#[Sum08_ID]#summInfoDiv#
 UpdateRate=6
 [Sum08_Tier]
@@ -398,7 +400,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum09_ID]#SummInfoTier#[Sum09_ID]#summInfoDiv#
 UpdateRate=6
 [Sum09_Tier]
@@ -416,7 +418,7 @@ StringIndex=2
 Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
-URL=file://#CURRENTPATH#/DownloadFile/#summJSON#
+URL=#sjsonFile#
 RegExp=(?siU).[Sum10_ID]#SummInfoTier#[Sum10_ID]#summInfoDiv#
 UpdateRate=6
 [Sum10_Tier]
@@ -754,33 +756,48 @@ Y=150
 ; ---------------------------------------------------------------------------------------------------
 ; ***************************************************************************************************
 
-; [SearchIcon]
-; Meter=IMAGE
-; ImageName=#IMGS#\mGlass-Box.png
-; X=10
-; Y=200
-; Hidden=0
-; AntiAlias=1
-; Group=left
+
+; Search bars might be a bit too big...
+
+[SearchIconClosed]
+Meter=IMAGE
+ImageName=#IMGS#\mGlass-Box.png
+X=10
+Y=200
+AntiAlias=1
+Group=left
 ;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
 ;MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
 
-; LeftMouseDownAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
-; RightMouseDownAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+;LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"][!CommandMeasure "SearchInput" "ExecuteBatch All"]
+LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"]
+;[!ShowMeter DefaultSearchText]
+
+;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
+;MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
+;LeftMouseDownAction=!Execute ["shell:UsersFilesFolder"]
+
+[SearchIconOpen]
+Meter=IMAGE
+ImageName=#IMGS#\mGlass-Extended.png
+X=10
+Y=200
+Hidden=1
+AntiAlias=1
+Group=left
+;LeftMouseDownAction=!Execute [!HideMeter "SearchIconOpen"][!ShowMeter "SearchIconClosed"]
+MiddleMouseDownAction=!Execute [!HideMeter "SearchIconOpen"][!HideMeter "DefaultSearchText"][!ShowMeter "SearchIconClosed"]
+LeftMouseUpAction=!CommandMeasure "SearchInput" "ExecuteBatch All"
 
 
-; MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
-; MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
-; LeftMouseDownAction=!Execute ["shell:UsersFilesFolder"]
-
-
-
+; Not currently in use -- migrated to the search bar.
 [DefaultSearchText]
 Meter=STRING
 MeterStyle=Style
-X=15r
-Y=21
+X=54r
+Y=12r
 Text="Search"
+Hidden=1
 StringAlign=LEFT
 FontColor=190,190,190
 FontFace=Droid Sans
@@ -798,17 +815,19 @@ Group=left
 Measure=Plugin
 DynamicVariables=1
 Plugin=InputText.dll
-X=92
-Y=18
-W=134
-H=18
+X=60
+Y=211
+W=124
+H=24
 SolidColor=236,236,236
-FontColor=150,150,150,255
+;SolidColor=255,255,255
+FontColor=50,50,50,255
 FontFace=Droid Sans
-FontSize=8
+FontSize=12
 FocusDismiss=1
 Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
 Command2=[!CommandMeasure "MeasureNameParser" "Update"]
+Command3=[!HideMeter "SearchIconOpen"][!HideMeter "DefaultSearchText"][!ShowMeter "SearchIconClosed"]
 ;Command2=[!UpdateMeasure "MeasureNameParser"]
 ;Command1=!Execute ["http://www.google.com/search?q=$UserInput$"] DefaultValue="Chaox"
 AntiAlias=1
