--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.122
+Version=0.123
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -34,6 +34,10 @@ IMGS=#SKINSPATH#LeagueSearch\Variables\Images\
 summItem=.*summonerName":"(.{0,30})",.*"summonerId":(.{0,30}),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
+
+; A primarily used right now for calls to riot api, B used to read from files.
+updateRate_A=20
+updateRate_B=10
 
 
 ; Different region formats for the API calls.
@@ -77,7 +81,7 @@ DynamicVariables=1
 ;URL=file://#CURRENTPATH#test1.txt
 URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder#?#apiKey#
 RegExp=(?siU)"id":(\d{1,9}),
-UpdateRate = 15
+UpdateRate = #updateRate_A#
 FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch All"]
 
 [inputID]
@@ -106,7 +110,7 @@ DynamicVariables=1
 URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/[&inputID]?#apiKey#
 RegExp=(?siU)"gameMode":"(.{1,20})",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
 ;RegExp=(?siU)"gameMode":"(.{1,20})",
-UpdateRate = 15
+UpdateRate = #updateRate_A#
 
 FinishAction = [!CommandMeasure MeasureSummonersParser "Update"]
 
@@ -245,7 +249,7 @@ Download=1
 DownloadFile=#summJSON#
 ;URL=file://#CURRENTPATH#test3.txt
 URL=https://#RegionA#.api.pvp.net/api/lol/#RegionA#/v2.5/league/by-summoner/[&Sum01_ID],[&Sum02_ID],[&Sum03_ID],[&Sum04_ID],[&Sum05_ID],[&Sum06_ID],[&Sum07_ID],[&Sum08_ID],[&Sum09_ID],[&Sum10_ID]/entry?#apiKey#
-UpdateRate = 15
+UpdateRate = #updateRate_A#
 
 
 [MeasureSumm01]
@@ -254,7 +258,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum01_ID]#SummInfoTier#[Sum01_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 ; TODO: Something about this update rate above so it doesn't keep checking my file.
 
 [Sum01_Tier]
@@ -276,7 +280,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum02_ID]#SummInfoTier#[Sum02_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum02_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -294,7 +298,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum03_ID]#SummInfoTier#[Sum03_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum03_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -312,7 +316,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum04_ID]#SummInfoTier#[Sum04_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum04_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -330,7 +334,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum05_ID]#SummInfoTier#[Sum05_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum05_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -348,7 +352,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum06_ID]#SummInfoTier#[Sum06_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum06_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -366,7 +370,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum07_ID]#SummInfoTier#[Sum07_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum07_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -384,7 +388,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum08_ID]#SummInfoTier#[Sum08_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum08_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -402,7 +406,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum09_ID]#SummInfoTier#[Sum09_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum09_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -420,7 +424,7 @@ Plugin=WebParser
 DynamicVariables=1
 URL=#sjsonFile#
 RegExp=(?siU).[Sum10_ID]#SummInfoTier#[Sum10_ID]#summInfoDiv#
-UpdateRate=6
+UpdateRate=#updateRate_B#
 [Sum10_Tier]
 Measure=Plugin
 Plugin=WebParser
@@ -450,6 +454,7 @@ H=250
 
 [TestInput]
 Meter=STRING
+DynamicVariables=1
 MeasureName=inputID
 StringStyle=Bold
 FontColor=255,255,255,255
@@ -794,9 +799,10 @@ LeftMouseUpAction=!CommandMeasure "SearchInput" "ExecuteBatch All"
 [DefaultSearchText]
 Meter=STRING
 MeterStyle=Style
-X=54r
-Y=12r
+X=400
+Y=16
 Text="Search"
+; Temporarily hidden just in case something goes wrong.
 Hidden=1
 StringAlign=LEFT
 FontColor=190,190,190
@@ -826,8 +832,11 @@ FontFace=Droid Sans
 FontSize=12
 FocusDismiss=1
 Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
-Command2=[!CommandMeasure "MeasureNameParser" "Update"]
-Command3=[!HideMeter "SearchIconOpen"][!HideMeter "DefaultSearchText"][!ShowMeter "SearchIconClosed"]
+;Command2=[!CommandMeasure "MeasureNameParser" "Update"]
+;Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
+Command2=[!HideMeter "SearchIconOpen"][!ShowMeter "SearchIconClosed"]
+Command3=[!CommandMeasure "MeasureNameParser" "Update"]
+
 ;Command2=[!UpdateMeasure "MeasureNameParser"]
 ;Command1=!Execute ["http://www.google.com/search?q=$UserInput$"] DefaultValue="Chaox"
 AntiAlias=1
