--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.123
+Version=0.124
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -35,10 +35,9 @@ summItem=.*summonerName":"(.{0,30})",.*"summonerId":(.{0,30}),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
 
-; A primarily used right now for calls to riot api, B used to read from files.
+; updateRate A primarily used right now for calls to riot api; B used to read from files.
 updateRate_A=20
 updateRate_B=10
-
 
 ; Different region formats for the API calls.
 RegionA=na
@@ -81,8 +80,8 @@ DynamicVariables=1
 ;URL=file://#CURRENTPATH#test1.txt
 URL=https://na.api.pvp.net/api/lol/na/v1.4/summoner/by-name/#NamePlaceholder#?#apiKey#
 RegExp=(?siU)"id":(\d{1,9}),
-UpdateRate = #updateRate_A#
-FinishAction = [!CommandMeasure "SearchInput2" "ExecuteBatch All"]
+UpdateRate=#updateRate_A#
+FinishAction=[!CommandMeasure "SearchInput2" "ExecuteBatch All"]
 
 [inputID]
 Measure=Plugin
@@ -106,10 +105,8 @@ Measure=Plugin
 Plugin=WebParser
 DynamicVariables=1
 ;URL=file://#CURRENTPATH#test2.txt
-;URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/#IDPlaceholder##apiKey#
 URL=https://#RegionA#.api.pvp.net/observer-mode/rest/consumer/getSpectatorGameInfo/#RegionB#/[&inputID]?#apiKey#
 RegExp=(?siU)"gameMode":"(.{1,20})",#summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem##summItem#
-;RegExp=(?siU)"gameMode":"(.{1,20})",
 UpdateRate = #updateRate_A#
 
 FinishAction = [!CommandMeasure MeasureSummonersParser "Update"]
@@ -452,17 +449,31 @@ Y=0
 W=480
 H=250
 
-[TestInput]
+[DisplayID]
 Meter=STRING
 DynamicVariables=1
 MeasureName=inputID
+Text=Resolved ID: %1
+;MeasureName="ID:" inputID
 StringStyle=Bold
+;StringEffect=Shadow
 FontColor=255,255,255,255
 FontSize=8
 X=4
 Y=10
 Hidden=0
 
+[DisplayGametype]
+Meter=STRING
+DynamicVariables=1
+MeasureName=GameMode
+Text=Resolved Gametype: %1
+StringStyle=Bold
+FontColor=255,255,255,255
+FontSize=8
+X=250
+Y=10
+Hidden=0
 
 [TestSumm1_a]
 Meter=STRING
@@ -791,7 +802,7 @@ Hidden=1
 AntiAlias=1
 Group=left
 ;LeftMouseDownAction=!Execute [!HideMeter "SearchIconOpen"][!ShowMeter "SearchIconClosed"]
-MiddleMouseDownAction=!Execute [!HideMeter "SearchIconOpen"][!HideMeter "DefaultSearchText"][!ShowMeter "SearchIconClosed"]
+MiddleMouseDownAction=!Execute [!ShowMeter "SearchIconClosed"][!HideMeter "SearchIconOpen"][!HideMeter "DefaultSearchText"]
 LeftMouseUpAction=!CommandMeasure "SearchInput" "ExecuteBatch All"
 
 
@@ -819,21 +830,21 @@ Group=left
 
 [SearchInput]
 Measure=Plugin
-DynamicVariables=1
 Plugin=InputText.dll
-X=60
-Y=211
-W=124
-H=24
+DynamicVariables=1
+X=46
+Y=206
+W=106
+H=18
 SolidColor=236,236,236
 ;SolidColor=255,255,255
 FontColor=50,50,50,255
 FontFace=Droid Sans
-FontSize=12
+FontSize=10
 FocusDismiss=1
-Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
+Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#NamePlaceholder#
 ;Command2=[!CommandMeasure "MeasureNameParser" "Update"]
-;Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#namePlaceholder#
+;Command1=[!SetVariable NamePlaceholder $UserInput$] DefaultValue=#NamePlaceholder#
 Command2=[!HideMeter "SearchIconOpen"][!ShowMeter "SearchIconClosed"]
 Command3=[!CommandMeasure "MeasureNameParser" "Update"]
 
