--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.124
+Version=0.130
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -27,12 +27,14 @@ Instructions=Type in the summoner's name of someone currently in game to display
 
 
 [Variables]
+@include=#SKINSPATH#LeagueSearch\Variables\Default.inc
+
 ; These variables are used for various regexp or url paths
 summJSON=TempJSON\summoners.json
 sjsonFile=file://#CURRENTPATH#/DownloadFile/#summJSON#
 IMGS=#SKINSPATH#LeagueSearch\Variables\Images\
 summItem=.*summonerName":"(.{0,30})",.*"summonerId":(.{0,30}),
-summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
+summInfoTier="":.{0,80}"tier":"(.{3,11})","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 summInfoDiv=".{0,80}"division":"([IV]{1,3})""
 
 ; updateRate A primarily used right now for calls to riot api; B used to read from files.
@@ -63,6 +65,9 @@ apiKey=api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
 NamePlaceholder=Hurricaned
 ;IDPlaceholder=24195176
 
+
+[Styles]
+@include=#SKINSPATH#LeagueSearch\Variables\Styles.inc
 
 
 ; -------------------------------------------------------------------------------------------------
@@ -451,55 +456,59 @@ H=250
 
 [DisplayID]
 Meter=STRING
+MeterStyle=otherInfo
 DynamicVariables=1
 MeasureName=inputID
 Text=Resolved ID: %1
 ;MeasureName="ID:" inputID
 StringStyle=Bold
-;StringEffect=Shadow
-FontColor=255,255,255,255
-FontSize=8
+;FontColor=255,255,255,255
+;FontSize=8
 X=4
 Y=10
 Hidden=0
 
 [DisplayGametype]
 Meter=STRING
+MeterStyle=otherInfo
 DynamicVariables=1
 MeasureName=GameMode
 Text=Resolved Gametype: %1
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+;StringStyle=Bold
+;FontColor=255,255,255,255
+;FontSize=8
 X=250
 Y=10
 Hidden=0
 
 [TestSumm1_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum01_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+;StringStyle=Bold
+;FontColor=255,255,255,255
+;FontSize=8
 X=6
 Y=30
 [TestSumm1_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum01_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+;StringStyle=Bold
+;FontColor=255,255,255,255
+;FontSize=8
 X=6
 Y=40
 [TestSumm1_c]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum01_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+;StringStyle=Bold
+;FontColor=255,255,255,255
+;FontSize=8
 X=10
 Y=50
 
