Avoid read/write errors to the same file
I/O errors when swapping between LoLSearch and testing2 skins.  Changing
the download file location should avoid that.

--- a/Lookup/testing2.ini
+++ b/Lookup/testing2.ini
@@ -10,7 +10,7 @@ Version=0.01
 
 
 [Variables]
-summJSON=TempJSON\summoners.json
+summJSON=TempJSON\summoners_testing_2.json
 summItem=.*summonerName":"(.*)",.*"summonerId":(.*),
 summInfoTier="":.{0,80}"tier":"(.*)","queue":"RANKED_SOLO_5x5","entries":\[{"playerOrTeamId":""
 SummInfoDiv=".{0,80}"division":"([IV]{1,3})""
