Changed Default/Styles.  Updated display code.
Updated the summoner displays to use new stylesheet.
Condensed Tier and Division to one line (3 objects per summoner down to
2 - name/tier-division).

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.130
+Version=0.132
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -496,133 +496,82 @@ Meter=STRING
 MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum01_Tier
+MeasureName2=Sum01_Div
+Text=%1 %2
 ;StringStyle=Bold
 ;FontColor=255,255,255,255
 ;FontSize=8
 X=6
-Y=40
-[TestSumm1_c]
-Meter=STRING
-MeterStyle=rankDiv
-DynamicVariables=1
-MeasureName=Sum01_Div
-;StringStyle=Bold
-;FontColor=255,255,255,255
-;FontSize=8
-X=10
-Y=50
+Y=44
 
 [TestSumm2_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum02_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=106
 Y=30
 [TestSumm2_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum02_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum02_Div
+Text=%1 %2
 X=106
-Y=40
-[TestSumm2_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum02_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=110
-Y=50
+Y=44
 
 [TestSumm3_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum03_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=206
 Y=30
 [TestSumm3_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum03_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum03_Div
+Text=%1 %2
 X=206
-Y=40
-[TestSumm3_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum03_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=210
-Y=50
+Y=44
 
 [TestSumm4_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum04_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=306
 Y=30
 [TestSumm4_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum04_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum04_Div
+Text=%1 %2
 X=306
-Y=40
-[TestSumm4_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum04_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=310
-Y=50
+Y=44
 
 [TestSumm5_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum05_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=406
 Y=30
 [TestSumm5_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum05_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
+MeasureName2=Sum05_Div
+Text=%1 %2
 FontSize=8
 X=406
-Y=40
-[TestSumm5_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum05_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=410
-Y=50
+Y=44
 
 
 ; ***************************************************************************************************
@@ -634,143 +583,88 @@ Y=50
 
 [TestSumm6_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum06_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=6
 Y=130
 [TestSumm6_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum06_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum06_Div
+Text=%1 %2
 X=6
-Y=140
-[TestSumm6_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum06_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=10
-Y=150
+Y=144
 
 [TestSumm7_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum07_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=106
 Y=130
 [TestSumm7_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum07_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum07_Div
+Text=%1 %2
 X=106
-Y=140
-[TestSumm7_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum07_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=110
-Y=150
+Y=144
 
 [TestSumm8_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum08_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=206
 Y=130
 [TestSumm8_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum08_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum08_Div
+Text=%1 %2
 X=206
-Y=140
-[TestSumm8_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum08_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=210
-Y=150
+Y=144
 
 [TestSumm9_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum09_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=306
 Y=130
 [TestSumm9_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum09_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum09_Div
+Text=%1 %2
 X=306
-Y=140
-[TestSumm9_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum09_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=310
-Y=150
+Y=144
 
 [TestSumm10_a]
 Meter=STRING
+MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum10_Name
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
 X=406
 Y=130
 [TestSumm10_b]
 Meter=STRING
+MeterStyle=rankDiv
 DynamicVariables=1
 MeasureName=Sum10_Tier
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
+MeasureName2=Sum10_Div
+Text=%1 %2
 X=406
-Y=140
-[TestSumm10_c]
-Meter=STRING
-DynamicVariables=1
-MeasureName=Sum10_Div
-StringStyle=Bold
-FontColor=255,255,255,255
-FontSize=8
-X=410
-Y=150
+Y=144
 
 
 
