Middle Mouse to revert back to LoLSearch
Can Swap between LoLSearch and LoLDisplay now.

Not sure if updating turns off yet though.

--- a/Lookup/LoLDisplay.ini
+++ b/Lookup/LoLDisplay.ini
@@ -4,7 +4,7 @@ Author=dlu
 
 [Metadata]
 Name=League In-game Search Bar
-Version=0.150
+Version=0.200
 License=Creative Commons Attribution-Non-Commercial-Share Alike 4.0
 Information=Provides a search function for players currently in a league of legends game.
 Instructions=Type in the summoner's name of someone currently in game to display info of players in game.
@@ -61,7 +61,7 @@ apiKey=api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
 
 ; These placeholder values are mostly to streamline if you check one summoner frequently.
 ; Current ID place-holder is for: Hurricaned.
-NamePlaceholder=NightSecrets
+NamePlaceholder=Hurricaned
 ;IDPlaceholder=24195176
 
 
@@ -675,8 +675,6 @@ Y=144
 ; ***************************************************************************************************
 
 
-; Search bars might be a bit too big...
-
 [SearchIconClosed]
 Meter=IMAGE
 ImageName=#IMGS#\mGlass-Box.png
@@ -689,6 +687,11 @@ Group=left
 
 ;LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"][!CommandMeasure "SearchInput" "ExecuteBatch All"]
 LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"]
+
+; Middle Mouse => Revert back to LoLSearch.ini
+; Might want to create a separate meter for this one.
+MiddleMouseUpAction=[!ActivateConfig #this# "LoLSearch.ini"]
+
 ;[!ShowMeter DefaultSearchText]
 
 ;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
