Easier to Edit Layout
X/Y positions of Search Bar and summoners + summ. info mapped to
variables for ease of editing.

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -1,6 +1,6 @@
 [Rainmeter]
 Author=dlu
-; I can be contacted at davidylu@cmu.edu
+; davidylu@cmu.edu
 
 [Metadata]
 Name=League In-game Search Bar
@@ -11,9 +11,10 @@ Instructions=Type in the summoner's name of someone currently in game to display
 
 ; Hello!
 ; 
-; Thanks for using my in-game search.  Currently it's supposed to function like a mini, simplified 
-; version of lolnexus.net.  It fetches the current ranks/divisions of anyone in a given summoner's 
-; game and displays them on your screen.
+; This is my League of Legends in-game search.  Currently it's supposed to function like a mini, 
+; simplified version of lolnexus.net.  It fetches the current ranks/divisions of anyone in a given 
+; summoner's game and displays them on your screen.
+; Mostly it's just convenient and runs on Rainmeter.
 ; 
 ; - - - - - - - - - -
 ; 
@@ -55,8 +56,8 @@ Hidden=1
 [SearchIconClosed]
 Meter=IMAGE
 ImageName=#IMGS#\mGlass-Box.png
-X=10
-Y=200
+X=#searchX#
+Y=#searchY#
 AntiAlias=1
 Group=left
 ;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
@@ -73,8 +74,8 @@ LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchI
 [SearchIconOpen]
 Meter=IMAGE
 ImageName=#IMGS#\mGlass-Extended.png
-X=10
-Y=200
+X=#searchX#
+Y=#searchY#
 Hidden=1
 AntiAlias=1
 Group=left
@@ -89,10 +90,10 @@ LeftMouseUpAction=!CommandMeasure "SearchInput" "ExecuteBatch All"
 Measure=Plugin
 Plugin=InputText.dll
 DynamicVariables=1
-X=46
-Y=206
+X=#searchTextX#
+Y=#searchTextY#
 W=106
-H=18
+H=20
 SolidColor=236,236,236
 ;SolidColor=255,255,255
 FontColor=50,50,50,255
