--- a/Lookup/LoLDisplay.ini
+++ b/Lookup/LoLDisplay.ini
@@ -1,6 +1,6 @@
 [Rainmeter]
 Author=dlu
-; I can be contacted at davidylu@cmu.edu
+; davidylu@cmu.edu
 
 [Metadata]
 Name=League In-game Search Bar
@@ -40,6 +40,13 @@ summInfoDiv=".{0,80}"division":"([IV]{1,3})""
 updateRate_A=20
 updateRate_B=10
 
+; Spacing for display stuff (summoners and their information).
+sumX0=66
+sumXoff=120
+sumY0=50
+sumYoff=14
+sumY1=130
+
 ; Different region formats for the API calls.
 RegionA=na
 RegionB=NA1
@@ -61,7 +68,7 @@ apiKey=api_key=e73dcb7f-6ae8-4c0f-afed-354d2691b630
 
 ; These placeholder values are mostly to streamline if you check one summoner frequently.
 ; Current ID place-holder is for: Hurricaned.
-NamePlaceholder=Hurricaned
+NamePlaceholder=thli
 ;IDPlaceholder=24195176
 
 
@@ -464,7 +471,7 @@ StringStyle=Bold
 ;FontColor=255,255,255,255
 ;FontSize=8
 X=4
-Y=10
+Y=210
 Hidden=0
 
 [DisplayGametype]
@@ -477,8 +484,9 @@ Text=Resolved Gametype: %1
 ;FontColor=255,255,255,255
 ;FontSize=8
 X=250
-Y=10
+Y=210
 Hidden=0
+
 
 [TestSumm1_a]
 Meter=STRING
@@ -488,8 +496,8 @@ MeasureName=Sum01_Name
 ;StringStyle=Bold
 ;FontColor=255,255,255,255
 ;FontSize=8
-X=6
-Y=30
+X=#sumX0#
+Y=#sumY0#
 [TestSumm1_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -500,16 +508,16 @@ Text=%1 %2
 ;StringStyle=Bold
 ;FontColor=255,255,255,255
 ;FontSize=8
-X=6
-Y=44
+X=#sumX0#
+Y=(#sumY0# + 1* #sumYoff#)
 
 [TestSumm2_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum02_Name
-X=106
-Y=30
+X=(#sumX0# + 1* #sumXoff#)
+Y=#sumY0#
 [TestSumm2_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -517,16 +525,16 @@ DynamicVariables=1
 MeasureName=Sum02_Tier
 MeasureName2=Sum02_Div
 Text=%1 %2
-X=106
-Y=44
+X=(#sumX0# + 1* #sumXoff#)
+Y=(#sumY0# + 1* #sumYoff#)
 
 [TestSumm3_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum03_Name
-X=206
-Y=30
+X=(#sumX0# + 2* #sumXoff#)
+Y=#sumY0#
 [TestSumm3_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -534,16 +542,16 @@ DynamicVariables=1
 MeasureName=Sum03_Tier
 MeasureName2=Sum03_Div
 Text=%1 %2
-X=206
-Y=44
+X=(#sumX0# + 2* #sumXoff#)
+Y=(#sumY0# + 1* #sumYoff#)
 
 [TestSumm4_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum04_Name
-X=306
-Y=30
+X=(#sumX0# + 3* #sumXoff#)
+Y=#sumY0#
 [TestSumm4_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -551,16 +559,16 @@ DynamicVariables=1
 MeasureName=Sum04_Tier
 MeasureName2=Sum04_Div
 Text=%1 %2
-X=306
-Y=44
+X=(#sumX0# + 3* #sumXoff#)
+Y=(#sumY0# + 1* #sumYoff#)
 
 [TestSumm5_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum05_Name
-X=406
-Y=30
+X=(#sumX0# + 4* #sumXoff#)
+Y=#sumY0#
 [TestSumm5_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -569,8 +577,8 @@ MeasureName=Sum05_Tier
 MeasureName2=Sum05_Div
 Text=%1 %2
 FontSize=8
-X=406
-Y=44
+X=(#sumX0# + 4* #sumXoff#)
+Y=(#sumY0# + 1* #sumYoff#)
 
 
 ; ***************************************************************************************************
@@ -585,8 +593,8 @@ Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum06_Name
-X=6
-Y=130
+X=(#sumX0# + 0* #sumXoff#)
+Y=#sumY1#
 [TestSumm6_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -594,16 +602,16 @@ DynamicVariables=1
 MeasureName=Sum06_Tier
 MeasureName2=Sum06_Div
 Text=%1 %2
-X=6
-Y=144
+X=(#sumX0# + 0* #sumXoff#)
+Y=(#sumY1# + 1* #sumYoff#)
 
 [TestSumm7_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum07_Name
-X=106
-Y=130
+X=(#sumX0# + 1* #sumXoff#)
+Y=#sumY1#
 [TestSumm7_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -611,16 +619,16 @@ DynamicVariables=1
 MeasureName=Sum07_Tier
 MeasureName2=Sum07_Div
 Text=%1 %2
-X=106
-Y=144
+X=(#sumX0# + 1* #sumXoff#)
+Y=(#sumY1# + 1* #sumYoff#)
 
 [TestSumm8_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum08_Name
-X=206
-Y=130
+X=(#sumX0# + 2* #sumXoff#)
+Y=#sumY1#
 [TestSumm8_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -628,16 +636,16 @@ DynamicVariables=1
 MeasureName=Sum08_Tier
 MeasureName2=Sum08_Div
 Text=%1 %2
-X=206
-Y=144
+X=(#sumX0# + 2* #sumXoff#)
+Y=(#sumY1# + 1* #sumYoff#)
 
 [TestSumm9_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum09_Name
-X=306
-Y=130
+X=(#sumX0# + 3* #sumXoff#)
+Y=#sumY1#
 [TestSumm9_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -645,16 +653,16 @@ DynamicVariables=1
 MeasureName=Sum09_Tier
 MeasureName2=Sum09_Div
 Text=%1 %2
-X=306
-Y=144
+X=(#sumX0# + 3* #sumXoff#)
+Y=(#sumY1# + 1* #sumYoff#)
 
 [TestSumm10_a]
 Meter=STRING
 MeterStyle=summNames
 DynamicVariables=1
 MeasureName=Sum10_Name
-X=406
-Y=130
+X=(#sumX0# + 4* #sumXoff#)
+Y=#sumY1#
 [TestSumm10_b]
 Meter=STRING
 MeterStyle=rankDiv
@@ -662,8 +670,8 @@ DynamicVariables=1
 MeasureName=Sum10_Tier
 MeasureName2=Sum10_Div
 Text=%1 %2
-X=406
-Y=144
+X=(#sumX0# + 4* #sumXoff#)
+Y=(#sumY1# + 1* #sumYoff#)
 
 
 
@@ -678,8 +686,8 @@ Y=144
 [SearchIconClosed]
 Meter=IMAGE
 ImageName=#IMGS#\mGlass-Box.png
-X=10
-Y=200
+X=#searchX#
+Y=#searchY#
 AntiAlias=1
 Group=left
 ;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
@@ -701,8 +709,8 @@ MiddleMouseUpAction=[!ActivateConfig #this# "LoLSearch.ini"]
 [SearchIconOpen]
 Meter=IMAGE
 ImageName=#IMGS#\mGlass-Extended.png
-X=10
-Y=200
+X=#searchX#
+Y=#searchY#
 Hidden=1
 AntiAlias=1
 Group=left
@@ -737,11 +745,12 @@ Group=left
 Measure=Plugin
 Plugin=InputText.dll
 DynamicVariables=1
-X=46
-Y=206
+X=#searchTextX#
+Y=#searchTextY#
 W=106
-H=18
+H=20
 SolidColor=236,236,236
+;SolidColor=40,40,40
 ;SolidColor=255,255,255
 FontColor=50,50,50,255
 FontFace=Droid Sans
