Added a x2-middle click command to remove skin
Added a double middle click command to remove the skin, when viewing
LoLSearch (unopened basic search icon).

--- a/Lookup/LoLSearch.ini
+++ b/Lookup/LoLSearch.ini
@@ -66,6 +66,7 @@ Group=left
 ;LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"][!CommandMeasure "SearchInput" "ExecuteBatch All"]
 LeftMouseDownAction=!Execute [!HideMeter "SearchIconClosed"][!ShowMeter "SearchIconOpen"]
 ;[!ShowMeter DefaultSearchText]
+MiddleMouseDoubleClickAction=[!ToggleConfig #this# "LoLSearch.ini"]
 
 ;MouseOverAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Extended.png"][!Update]
 ;MouseLeaveAction=!Execute [!SetOption #CURRENTSECTION# ImageName "#IMGS#\mGlass-Box.png"][!Update]
